[gd_scene load_steps=22 format=3 uid="uid://brw0p1eirto83"]

[ext_resource type="Script" uid="uid://om4qdtr1cye0" path="res://scripts/entities/player/nova/nova.gd" id="1_p5oh7"]
[ext_resource type="Shader" uid="uid://bj52sv4noi8eh" path="res://shaders/prototype.tres" id="2_xdlwu"]
[ext_resource type="Script" path="res://scripts/dev/debug_render_hitboxes.gd" id="3_6m1nx"]
[ext_resource type="Script" uid="uid://cvw6ajdumfkos" path="res://scripts/entities/player/nova/nova_dummy_anim.gd" id="3_h31i5"]
[ext_resource type="Script" uid="uid://b5x83pb133x8d" path="res://scripts/entities/player/player_states/player_state_machine.gd" id="4_lfcoe"]
[ext_resource type="Script" uid="uid://dq5qwb33mlr2l" path="res://scripts/entities/player/player_states/player_moving.gd" id="5_lfcoe"]
[ext_resource type="Script" uid="uid://bpndinylqyege" path="res://scripts/entities/player/player_states/player_idle.gd" id="5_xhleb"]
[ext_resource type="Script" uid="uid://dbibjhk11ovnr" path="res://scripts/entities/player/player_states/player_charge.gd" id="7_w7jsq"]
[ext_resource type="Script" uid="uid://duy3nnii2osyx" path="res://scripts/entities/player/nova/states/nova_attack.gd" id="8_hun6t"]
[ext_resource type="Script" uid="uid://bht7ur6aqu5my" path="res://scripts/entities/player/player_states/player_charge_special.gd" id="9_8b4uh"]
[ext_resource type="Script" uid="uid://jah7iax60wqa" path="res://scripts/entities/player/nova/states/nova_attack_charged.gd" id="9_h31i5"]
[ext_resource type="Script" uid="uid://8e04epciukwh" path="res://scripts/entities/player/nova/states/nova_attack_special.gd" id="10_h31i5"]
[ext_resource type="Script" uid="uid://cauiecxurft0c" path="res://scripts/entities/player/nova/states/nove_attack_special_charged.gd" id="12_k5vrc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_21ndv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7ch2h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnm4i"]
render_priority = 0
shader = ExtResource("2_xdlwu")

[sub_resource type="BoxMesh" id="BoxMesh_x427t"]
size = Vector3(0.1, 0.1, 5)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xdlwu"]
height = 0.1
radius = 3.0

[sub_resource type="BoxShape3D" id="BoxShape3D_21ndv"]
size = Vector3(1.5, 0.1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_7ch2h"]
size = Vector3(3, 0.1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_x427t"]
size = Vector3(4, 0.1, 3)

[node name="Nova" type="CharacterBody3D"]
collision_layer = 6
collision_mask = 3
script = ExtResource("1_p5oh7")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_lfcoe")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_xhleb")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("5_lfcoe")

[node name="Charging" type="Node" parent="StateMachine"]
script = ExtResource("7_w7jsq")

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource("8_hun6t")

[node name="AttackingCharged" type="Node" parent="StateMachine"]
script = ExtResource("9_h31i5")

[node name="ChargingSpecial" type="Node" parent="StateMachine"]
script = ExtResource("9_8b4uh")

[node name="AttackingSpecial" type="Node" parent="StateMachine"]
script = ExtResource("10_h31i5")

[node name="AttackingChargedSpecial" type="Node" parent="StateMachine"]
script = ExtResource("12_k5vrc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_21ndv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_7ch2h")
surface_material_override/0 = SubResource("ShaderMaterial_lnm4i")

[node name="DummyAnimation" type="Node" parent="."]
script = ExtResource("3_h31i5")

[node name="ForwardRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
enabled = false
target_position = Vector3(0, 0, -10)

[node name="VisualRay" type="MeshInstance3D" parent="ForwardRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)
mesh = SubResource("BoxMesh_x427t")

[node name="Hitboxes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("3_6m1nx")

[node name="Sweep" type="Area3D" parent="Hitboxes"]
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Sweep"]
shape = SubResource("CylinderShape3D_xdlwu")

[node name="Poke" type="Area3D" parent="Hitboxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Poke"]
shape = SubResource("BoxShape3D_21ndv")

[node name="Dash" type="Area3D" parent="Hitboxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Dash"]
shape = SubResource("BoxShape3D_7ch2h")

[node name="Slash" type="Area3D" parent="Hitboxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Slash"]
shape = SubResource("BoxShape3D_x427t")

[connection signal="entered" from="StateMachine/Attacking" to="DummyAnimation" method="attack" unbinds=3]
[connection signal="entered" from="StateMachine/AttackingCharged" to="DummyAnimation" method="attack_charged" unbinds=2]
[connection signal="special_dash" from="StateMachine/AttackingSpecial" to="DummyAnimation" method="special_dash"]
[connection signal="special_dash" from="StateMachine/AttackingChargedSpecial" to="DummyAnimation" method="special_dash"]
[connection signal="attack_charged_done" from="DummyAnimation" to="StateMachine/AttackingCharged" method="end"]
[connection signal="attack_charged_hit" from="DummyAnimation" to="StateMachine/AttackingCharged" method="do_damage"]
[connection signal="attack_done" from="DummyAnimation" to="StateMachine/Attacking" method="end"]
[connection signal="attack_hit" from="DummyAnimation" to="StateMachine/Attacking" method="do_damage"]
